update home page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@ search_exclude: true
 image: images/logo.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+<img src="images/banner.png" style="width:100%;" />
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+<p>Anthony Faustine, is a senior industrial data analytics and machine learning researcher at Irish Manufacturing Research (IMR) with successful experience applying data science and machine learning techniques to business problems. 
+His research interest lies in using machine learning, deep learning, data science, and signal processing to develop computational models, methods, and tools to help manufacturing design more effective solutions . A brief outline of my current research topics is provided below.
+<p><strong>Research Interest</strong></p>
+<ol>
+<li>Machine learning and signal processing for energy systems with a focus on Non-Intrusive Load Monitoring (NILM), Community Energy and Smart Grid.
+</li>
+<li>Artificial Intelligence for Earth Observations(EO) data with a focus on sustainable energy, agriculture and natural resources management. </li>
+<li>Robust deep learning for industrial applications with a focus on a learning algorithm that allows uncertainty quantification, is robust to adversarial attacks and allows self-supervised or semi-supervised learning </li>
+<li>Data management with a focus on specification, strategies, best practises and guideline for machine learning training dataset (TDs) development. </li>
+</ol>
 
-You can edit the `index.html` file to change this content.
 
-# Posts
